migration issue fix

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "PixelMartDbContextConnection": "Server=THUNDERHAWK-319\\SQLEXPRESS;Database=PixelMart;User Id=sa;Password=namal319;TrustServerCertificate=True;MultipleActiveResultSets=true"
+        "PixelMartDbContextConnection": "Server=THUNDERHAWK-319\\SQLEXPRESS;Database=PixelMartDB;User Id=sa;Password=namal319;TrustServerCertificate=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
