--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PixelMartDbContextConnection": "Server=THUNDERHAWK-319\\SQLEXPRESS;Database=PixelMartDB;User Id=sa;Password={DB_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "PixelMartDbContextConnection": "Server=sql-server;Database=PixelMartDB;User Id=sa;Password={DB_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
@@ -11,8 +11,7 @@
   },
 
   "JWT": {
-    "Secret": "{JWT_SECRET_KEY}",
-    "Audience": "user",
-    "Issuer": "https://localhost:41251/"
+    "Audience": "PixelMartClient",
+    "Issuer": "PixelMartAPI"
   }
 }
