docker config changes

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PixelMartDbContextConnection": "Server=sql-server;Database=PixelMartDB;User Id=sa;Password={DB_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "PixelMartDbContextConnection": "Server=sql-server;Database=PixelMartDB;User Id=sa;Password={DB_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=true;ConnectRetryCount=3;ConnectRetryInterval=5;"
   },
 
   "Logging": {
