--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,15 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "ConnectionStrings": {
+    "PixelMartDbContextConnection": "Server=sql-server;Database=PixelMartDB;User Id=sa;Password={DB_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=true;ConnectRetryCount=3;ConnectRetryInterval=5;"
+  },
+  "JWT": {
+    "Audience": "PixelMartClient",
+    "Issuer": "PixelMartAPI"
+  }
 }
