--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,38 +3,40 @@ version: '3.8'
 services:
   pixelmart.api:
     build:
-        context: .
-        dockerfile: Dockerfile
+      context: .
+      dockerfile: Dockerfile
+    image: pixelmart.api:v1.0
     env_file:
-        - .env
-    depends_on:
-        - sql-server
-    environment:
-        - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=http://+:8080
-        - ConnectionStrings__PixelMartDbContextConnection=Server=sql-server;Database=PixelMartDB;User=sa;Password=${DB_PASSWORD};TrustServerCertificate=True;ConnectRetryCount=5;ConnectRetryInterval=10;
-        - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-        - Jwt__Issuer=PixelMartAPI
-        - Jwt__Audience=PixelMartClient
+      - .env
     ports:
-        - "5001:8080"
+      - "5001:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:8080
+      - ConnectionStrings__PixelMartDbContextConnection=Server=sql-server;Database=PixelMartDB;User Id=sa;Password=${DB_PASSWORD};TrustServerCertificate=True;ConnectRetryCount=5;ConnectRetryInterval=10;
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - Jwt__Issuer=PixelMartAPI
+      - Jwt__Audience=PixelMartClient
+    depends_on:
+      - sql-server
+    restart: on-failure
     networks:
-        - pixelmart-network
+      - pixelmart-network
 
   sql-server:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: sql-server
+    ports:
+      - "1433:1433"
     environment:
       - ACCEPT_EULA=Y
       - MSSQL_SA_PASSWORD=${DB_PASSWORD}
-    ports:
-      - "1433:1433"
     volumes:
       - sqlserver_data:/var/opt/mssql
     networks:
-        - pixelmart-network
+      - pixelmart-network
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P '${DB_PASSWORD}' -Q 'SELECT 1' || exit 1"]
+      test: [ "CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P '${DB_PASSWORD}' -Q 'SELECT 1' || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 5
