added github actions configuration

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,15 +1,13 @@
 {
-  "ConnectionStrings": {
-    "PixelMartDbContextConnection": "Server=sql-server;Database=PixelMartDB;User Id=sa;Password={DB_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=true;ConnectRetryCount=3;ConnectRetryInterval=5;"
-  },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-
+  "ConnectionStrings": {
+    "PixelMartDbContextConnection": "Server=sql-server;Database=PixelMartDB;User Id=sa;Password={DB_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=true;ConnectRetryCount=3;ConnectRetryInterval=5;"
+  },
   "JWT": {
     "Audience": "PixelMartClient",
     "Issuer": "PixelMartAPI"
