--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PixelMartDbContextConnection": "Server=sql-server;Database=PixelMartDB;User Id=sa;Password={DB_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=true;ConnectRetryCount=3;ConnectRetryInterval=5;"
+    "PixelMartDbConnection": "Server=sql-server;Database=PixelMartDB;User Id=sa;Password={DB_PASSWORD};TrustServerCertificate=True;MultipleActiveResultSets=true;ConnectRetryCount=5;ConnectRetryInterval=10;"
   },
   "JWT": {
     "Audience": "PixelMartClient",
