--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,6 +10,7 @@
   },
   "JWT": {
     "Audience": "PixelMartClient",
-    "Issuer": "PixelMartAPI"
+    "Issuer": "PixelMartAPI",
+    "ExpiryInMinutes": 30
   }
 }
